<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:background="#E6D9AB"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hostel_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electrician_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:id="@+id/hostel_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hostel_name"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/roomDetailsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_name"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/date_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_name"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/complaintDetailsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complaint_name"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/electricianName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/electrician_name"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_name"
                    android:textSize="20sp"
                    android:textColor="#000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false" />
                <CheckBox
                    android:id="@+id/check2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"/>
                <CheckBox
                    android:id="@+id/check3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>