<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:id="@+id/logo" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/emailLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_name"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_roll_black_24dp"
                android:drawablePadding="30dp"
                android:background="@android:color/transparent"/>

        </android.support.design.widget.TextInputLayout>
        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#71d2d2d2"
            android:layout_below="@+id/emailLogIn"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/passLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password_name"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_password_blue_24dp"
                android:drawablePadding="30dp"
                android:background="@android:color/transparent"/>

        </android.support.design.widget.TextInputLayout>
        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#71d2d2d2"
            android:layout_below="@+id/passLogIn"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_below="@+id/pass"
            android:background="#0066ff"
            android:textColor="#ffffff"/>
    </LinearLayout>

</RelativeLayout>